# opengl-engine

./: .gitignore  CMakeLists.txt  README.md
assets/: sphere.h  suzi_flat.h  triangle_tex.h
assets/static/: cube.h  square_uv.h
models/: plain.h  sphere.h  suzi_flat.h  suzi_smooth.h
shaders/: _phong.original  blinn.frag  blinn.vert  constant.frag  constant.vert  lambert.frag  lambert.vert  mvp_empty.frag  mvp_empty.vert  phong.frag  phong_creep.frag  phong_tex.frag  phong_tex.vert  skybox.frag  skybox.vert
src/: application.cpp  application.h  camera.cpp  camera.h  const.h  drawable.cpp  drawable.h  event_args.h  main.cpp  model.cpp  model.h  observer.h  old_main.cpp  scene.cpp  scene.h  shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  shader_programs.cpp  shader_programs.h  transform.cpp  transform.h  transform_composite.cpp  transform_composite.h
src/core/: application.cpp  application.h  model_loader.cpp  model_loader.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h
src/core/loaders/: asset_loader.cpp  asset_loader.h  model_loader.cpp  model_loader.h  scene_loader.cpp  scene_loader.h  texture_loader.cpp  texture_loader.h
src/models/: drawable.cpp  drawable.h  material.h  model.cpp  model.h  texture.cpp  texture.h
src/models/animations/: animation.h  centric_model.cpp  centric_model.h  cubic_bezier.cpp  cubic_bezier.h  cubic_chain.cpp  cubic_chain.h  linear.cpp  linear.h
src/models/properties/: material.h  texture.cpp  texture.h
src/rendering/: animation_manager.cpp  animation_manager.h  camera.cpp  camera.h  light.cpp  light.h  light_manager.cpp  light_manager.h  object_manager.cpp  object_manager.h  shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  shader_uniforms.cpp  shader_uniforms.h  transform.h  transform_composite.cpp  transform_composite.h
src/rendering/light/: directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spotlight.cpp  spotlight.h
src/rendering/shaders/: shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  shader_uniforms.cpp  shader_uniforms.h
src/rendering/shaders/uniforms/: dynamic_uniforms.cpp  dynamic_uniforms.h  shader_uniforms.cpp  shader_uniforms.h  uniforms.cpp  uniforms.h
src/shaders/: shader.cpp  shader.h  shader_loader.cpp
src/shaders/uniforms/: dynamic_uniforms.cpp  dynamic_uniforms.h  shader_uniforms.cpp  shader_uniforms.h
src/transform/: transform.cpp  transform.h  transform_composite.cpp  transform_composite.h
src/util/: const.h  const_lights.h  event_args.h  observer.cpp  observer.h
